<resources>
    <string name="app_name">Trabalho - 01</string>
    <string name="editLogged">Lembrar Usuário</string>
    <string name="viewPermanecerLogado">Permanecer logado?</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonCadastrar">Cadastrar</string>
    <string name="emailHint">example@example.com</string>
    <string name="autoComplete">País de origem</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
